# superhaskell

./: .gitignore  CREDITS  LICENSE  README.md  stack.yaml  superhaskell.cabal
app/: Main.hs
assets/: game_over.xcf
font-gen/: convert-fonts.sh
presentation/: index.html  notes.txt
presentation/img/: bg.xcf
report/: report.md
src/: Game.hs  Generation.hs  Lib.hs  Processing.hs  Rendering.hs  Util.hs  World.hs
src/Superhaskell/: Data.hs  Drawing.hs  Game.hs  Generation.hs  Math.hs  Processing.hs  RenderList.hs
src/Superhaskell/Data/: Entities.hs  Entity.hs  GameState.hs  InputState.hs  RenderList.hs
src/Superhaskell/Entities/: Cloud.hs  GameStart.hs  Platform.hs  Player.hs  ScoreCounter.hs
src/Superhaskell/SDL/: Init.hs  Input.hs  Rendering.hs
superhaskell/: superhaskell.cabal
test/: Spec.hs
