name:                superhaskell
version:             0.1.0.0
synopsis:            Simple haskell platformer
description:         Please see README.md
homepage:            https://gogs.pushrax.com/haskell2016/superhaskell 
license:             MIT
license-file:        LICENSE
author:              Simon Strassl, Michael Kainer
maintainer:          simon.strassl@gmail.com, kaini@pushrax.com
copyright:           2016 Simon Strassl, Michael Kainer
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Superhaskell.Game
  other-modules:       Superhaskell.Data
                     , Superhaskell.Generation
                     , Superhaskell.Processing
                     , Superhaskell.RenderList
                     , Superhaskell.SDL.Rendering
                     , Superhaskell.SDL.Input
  build-depends:       base
                     , sdl2
                     , linear
                     , stm
                     , monad-loops
                     , JuicyPixels
                     , text
                     , unordered-containers
                     , directory
                     , vector
  default-language:    Haskell2010

executable superhaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , superhaskell
  default-language:    Haskell2010

test-suite superhaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , superhaskell
                     , HUnit
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gogs.pushrax.com/haskell2016/superhaskell 
