name:                superhaskell
version:             0.1.0.0
synopsis:            Simple haskell platformer
description:         Please see README.md
homepage:            https://gogs.pushrax.com/haskell2016/superhaskell 
license:             MIT
license-file:        LICENSE
author:              Simon Strassl, Michael Kainer
maintainer:          simon.strassl@gmail.com, kaini@pushrax.com
copyright:           2016 Simon Strassl, Michael Kainer
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  exposed-modules:     Superhaskell.Game
  other-modules:       Superhaskell.Data.GameState
                     , Superhaskell.Data.InputState
                     , Superhaskell.Data.Entities
                     , Superhaskell.Data.RenderList
                     , Superhaskell.Generation
                     , Superhaskell.Processing
                     , Superhaskell.SDL.Rendering
                     , Superhaskell.SDL.Input
                     , Superhaskell.SDL.Init
                     , Superhaskell.Math
                     , Superhaskell.Entities.Player
                     , Superhaskell.Entities.Platform
  build-depends:       base
                     , sdl2
                     , lens
                     , linear
                     , stm
                     , monad-loops
                     , JuicyPixels
                     , text
                     , containers
                     , unordered-containers
                     , directory
                     , vector
                     , clock
                     , OpenGL
                     , OpenGLRaw
                     , bytestring
                     , raw-strings-qq
                     , deepseq
                     , MonadRandom
                     , random
  default-language:    Haskell2010

executable superhaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , superhaskell
  default-language:    Haskell2010

test-suite superhaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , superhaskell
                     , HUnit
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gogs.pushrax.com/haskell2016/superhaskell 
